Removed margins from paragraphs to fix spacing issue in smaller windows.

--- a/styles/base.css
+++ b/styles/base.css
@@ -90,11 +90,13 @@ main {
 
 p {
     padding: 5px;
+    margin: 0;
 }
 
 img {
     width: 180px;
     padding: 5px;
+    
 }
 
 .profilepic {
